force-app/main/default/objects/Document_Review__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Document Reviews (Academic Program)</relationshipLabel>
        <relationshipName>Document_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Document Reviews</relationshipLabel>
        <relationshipName>Document_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Review_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Queue_Type__c</fullName>
        <label>Queue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Non-Academic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <default>true</default>
                    <label>Complete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Review</label>
    <listViews>
        <fullName>Academic_Document_Review</fullName>
        <filterScope>Queue</filterScope>
        <label>Academic Documents</label>
        <queue>Academic</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Academic_Documents_Document_Review</fullName>
        <columns>NAME</columns>
        <columns>Academic_Program__c</columns>
        <columns>Household__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <label>Academic Documents</label>
        <queue>Academic</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Queue_Type__c</columns>
        <columns>Household__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Enrollment_Document_Review</fullName>
        <filterScope>Queue</filterScope>
        <label>Enrollment Queue</label>
        <queue>Enrollment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Document_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Academic_Program__c</columns>
        <columns>Household__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Document Reviews</label>
    </listViews>
    <listViews>
        <fullName>Non_Academic_Document_Review</fullName>
        <filterScope>Queue</filterScope>
        <label>Non-Academic Documents</label>
        <queue>Non_Academic</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_Academic_Documents_Document_Review</fullName>
        <columns>NAME</columns>
        <columns>Academic_Program__c</columns>
        <columns>Household__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <label>Non-Academic Documents</label>
        <queue>Non_Academic</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Placement_Document_Review</fullName>
        <filterScope>Queue</filterScope>
        <label>Placement Queue</label>
        <queue>Placement</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DR-{0}</displayFormat>
        <label>Document Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>