force-app/main/default/objects/Document_Review__c/listViews/Academic_Document_Review.listView-meta.xml
<ListView>
    <fullName>Academic_Document_Review</fullName>
    <filterScope>Queue</filterScope>
    <label>Academic Documents</label>
    <queue>Academic</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>