force-app/main/default/objects/Document_Review__c/listViews/Academic_Documents_Document_Review.listView-meta.xml
<ListView>
    <fullName>Academic_Documents_Document_Review</fullName>
    <columns>NAME</columns>
    <columns>Academic_Program__c</columns>
    <columns>Household__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Queue</filterScope>
    <label>Academic Documents</label>
    <queue>Academic</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>