force-app/main/default/objects/Document_Review__c/listViews/Enrollment_Document_Review.listView-meta.xml
<ListView>
    <fullName>Enrollment_Document_Review</fullName>
    <filterScope>Queue</filterScope>
    <label>Enrollment Queue</label>
    <queue>Enrollment</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>