force-app/main/default/objects/Document_Review__c/listViews/My_Document_Reviews.listView-meta.xml
<ListView>
    <fullName>My_Document_Reviews</fullName>
    <columns>NAME</columns>
    <columns>Academic_Program__c</columns>
    <columns>Household__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Document Reviews</label>
</ListView>