force-app/main/default/objects/Document_Review__c/listViews/Non_Academic_Document_Review.listView-meta.xml
<ListView>
    <fullName>Non_Academic_Document_Review</fullName>
    <filterScope>Queue</filterScope>
    <label>Non-Academic Documents</label>
    <queue>Non_Academic</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>