force-app/main/default/objects/Document_Review__c/listViews/Placement_Document_Review.listView-meta.xml
<ListView>
    <fullName>Placement_Document_Review</fullName>
    <filterScope>Queue</filterScope>
    <label>Placement Queue</label>
    <queue>Placement</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>